    Gave the option to print the commands passed off only if wanted to
    Formatted the '-h' text to be even more helpful!
    Deleted the current useless documentation, adding new docs soon
    Did some serious encapsulation and reorganization of entire compilation system
    Fixed the error management system to make sure it is reliable
    All communications from cyther to the user are located in a single place, and done through stdout

0.6.2
    Fixed an encoding bug
    Deleted the test_cyther null command in the travis yaml
    Took README.md out of the .gitignore
    Fixed the distribution settings
    Implemented some PEP8 rules
    Added the __all__ attribute to cyther.py
    Reordered all functions to make more sense
    Properly encapsulated the 'script' code
    Finally added proper documentation!

0.7.0
    Dealt with pypi nonsense
    Took out auto deployment

0.7.1
    Updated the README to include the current cytherize -h text
    Added linereader to the packages included

0.8.0
    A bunch of bug fixes and internal problem solving:

    Cut out unnecssary junk in the help text (gcc configurations)
    Fixed some PEP8 issues
    Split cyther.py into multiple modules to make everything easier to understand
    Updated setup.cfg to include the correct README
    Implemented entry_points on setup tools to make an executable script instead of doing it manually
    Temporarily disabled the -p presets system
    Cyther now works in three stages: cython, compile, link
    The help text now prints the directories for 'include' and 'runtime' used by cyther
    Updated test_cyther to correctly call cytherize
    Reorganized the structure of the package
    Reworked the 'package_data'
    TODO (not yet done)
    Implemented a 'makefile' system. This is not the primary method of compilation.
        Instead of directly calling commands, it will make a 'makefile', for later modification if desired